--- a/package.json
+++ b/package.json
@@ -1,14 +1,13 @@
 {
-  "name": "RainbowEverything",
-  "version": "1.0.8",
-  "description": "Makes everything into a synchronized rainbow.",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "author": "PapaSmurf",
-  "license": "ISC",
-  "dependencies": {},
-  "devDependencies": {}
+  "name": "HPTunic",
+  "version": "1.0.4",
+  "description": "Change tunic color based on hp!",
+  "main": "HPTunic.js",
+  "author": "Drahsid",
+  "credits": "",
+  "license": "MIT",
+  "core": "OcarinaofTime",
+  "dry": {
+    "extends": "./ModLoader64/package-dry.json"
+  }
 }
